--- a/lambda-auth/handler/package.json
+++ b/lambda-auth/handler/package.json
@@ -7,7 +7,10 @@
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.1"
+    "aws-sdk": "^2.1378.0",
+    "axios": "^0.21.1",
+    "dotenv": "^16.0.3",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "test": "mocha tests/unit/"
